src/test/resources/cocos/invalid/NamingConvention/UsageNameUpperCase.sysml
package 'UsageNameUpperCase' {
	block Vehicle {
		value CapitalizedMass : Real;
		value status : VehicleStatus;

		part CapitalizedStatus : Engine;

		ref driver : Person;
	}
}